--- a/app/build.gradle
+++ b/app/build.gradle
@@ -79,5 +79,6 @@ dependencies {
   implementation 'com.airbnb.android:lottie:3.3.1'
   implementation 'com.google.firebase:firebase-analytics:17.2.2'
   implementation 'com.google.firebase:firebase-ads:18.3.0'
+  implementation 'com.google.firebase:firebase-config:18.0.0'
 }
 apply plugin: 'com.google.gms.google-services'
