--- a/app/build.gradle
+++ b/app/build.gradle
@@ -80,5 +80,7 @@ dependencies {
   implementation 'com.google.firebase:firebase-analytics:17.2.2'
   implementation 'com.google.firebase:firebase-ads:18.3.0'
   implementation 'com.google.firebase:firebase-config:18.0.0'
+  implementation 'com.amplitude:android-sdk:2.23.2'
+
 }
 apply plugin: 'com.google.gms.google-services'
