--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-android'
 apply plugin: 'com.google.gms.google-services'
+apply plugin: 'com.google.firebase.crashlytics'
 
 android {
   compileSdkVersion 29
@@ -9,8 +10,8 @@ android {
     applicationId "app.kek.kek"
     minSdkVersion 21
     targetSdkVersion 29
-    versionCode 8
-    versionName "1.7"
+    versionCode 10
+    versionName "1.9"
     testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
   }
   buildTypes {
@@ -81,6 +82,8 @@ dependencies {
   implementation 'com.google.firebase:firebase-ads:18.3.0'
   implementation 'com.google.firebase:firebase-config:18.0.0'
   implementation 'com.amplitude:android-sdk:2.23.2'
+  implementation 'com.crashlytics.sdk.android:crashlytics:2.10.1'
+
 
 }
 apply plugin: 'com.google.gms.google-services'
