new inter mechanic
https://wsoteam.atlassian.net/browse/TN-20042

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -112,6 +112,8 @@
       <activity
           android:name=".inapp.RocketAct" />
         <activity
+            android:name=".inapp.InterRocketAct" />
+        <activity
             android:name=".inapp.premiums.PremiumHostAct" />
 
         <meta-data
